2015-06-23 Martin Grønholdt

* net/tcp.c: Reverted to last version before state machine changes.
*          : Changes getting up to date.


2015-06-22 Martin Grønholdt

* net/tcp.h (tcp_connection): Changed sending to boolean.
* net/tcp.c (tcp_sent_cb): Changed code to support sending being boolean.
*			(tcp_send): Changed code to support sending being boolean.
* slighttp/http.h (http_response): Added send.
*				  (http_response_states): Added HTTP_STATE_ASSEMBLED.
* slighttp/http-fs.c: Changed to use http_send.
*					 (sm_http_fs_context): Renamed to http_fs_context.
* slighttp/http-tcp (tcp_connect_cb): Set status code to 200.
*					(tcp_recv_cb): Set status code to 400 on empty request.
*								 : Start sending response, when done parsing the request.
*					(tcp_sent_cb): Send additional data if not done, else set HTTP_STATE_DONE.
*								 : Reset buffer.
* slighttp/http-response.c: Added send_buffer.
*						   (http_send_header): Changed return type to uchar.
*						   (http_send_status_line):  Changed return type to uchar.
* slighttp/http-response.h: Added http_process_response.


2015-06-21 Martin Grønholdt

* debug.c; Added db_mem_list.
* sm_http.c: Don't do anything if still sending.
* user_main.c: state is now global.
* slighttp/http.h: Added HTTP_SEND_BUFFER_SIZE.
* 				  (http_response): Added send_buffer and send_buffer_pos.
* slighttp/http-response.c: Added http_send.
* slighttp/http-request.c (http_parse_headers): Forget to increase number of headers in the second run.
* 											  : Was copying header value from th e wrong place.
*						  (http_free_request): More checks, and pass connection instead of request
* slighttp/http-tcp.c (tcp_reconnect_cb): Don't disconnect.
*					  (tcp_recv_cb): Call main event handler and send HTTP.
*					  (tcp_sent_cb): Call main event handler and send HTTP.
* slighttp/http-fs.c (httpfs_destroy): More debug.
* net/tcp.c (tcp_connect_cb): Don't disconnect.


2015-06-20 Martin Grønholdt
